--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -5,13 +5,13 @@ MAINTAINER Alexander Weigl <Alexander.Weigl@student.kit.edu>
 WORKDIR /home
 
 RUN apt-get update
-RUN apt-get install -y python-virtualenv python-virtualenv python-lxml       \
+RUN apt-get install -y     python-virtualenv python-lxml       \
                            libvtk6 libvtk6-dev python-vtk6 cmake libcgal-dev \
+						   build-essentials gcc g++                          \
                            libboost-filesystem-dev libboost-test-dev         \
                            libboost-iostreams-dev libboost-system-dev        \
                            tetgen libtet1.5-dev libtet1.5 git swig           \
-                           python-dev
+                           python-dev                                        \ 
+						   libxml2-dev # libqt4-dev libqt4-opengl-dev qt4-dev-tools \
+		                   libpng12-dev libglew1.5-dev freeglut3-dev 
 
-ADD build.sh /home/
-
-RUN chmod 755 /home/build.sh && /home/build.sh
