--- a/restflow/Dockerfile
+++ b/restflow/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get install -y     python-virtualenv python-lxml       \
 
 RUN git clone http://github.com/CognitionGuidedSurgery/restflow.git
 RUN pip install -r restflow/requirements.txt 
-RUN pip install hf3lint gunicorn
+RUN pip install gunicorn
 
 RUN cd restflow && bash share/run_gunicorn.sh
 
