--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /home
 RUN apt-get update
 RUN apt-get install -y     python-virtualenv python-lxml       \
                            libvtk6 libvtk6-dev python-vtk6 cmake libcgal-dev \
-						   build-essentials gcc g++                          \
+						   build-essential gcc g++                          \
                            libboost-filesystem-dev libboost-test-dev         \
                            libboost-iostreams-dev libboost-system-dev        \
                            tetgen libtet1.5-dev libtet1.5 git swig           \
